# pysubopt

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: degaulle.txt
libs/doc-summarize/: README.md  pyproject.toml
libs/doc-summarize/doc_summarize/: cli.py  cost_fun.py  dataset.py  obj_fun.py  optimize.py
libs/opt-network/: README.md  pyproject.toml
libs/opt-network/opt_network/: cli.py  cost_fun.py  dataset.py  obj_fun.py  optimize.py
libs/opt-submodular/: README.md  pyproject.toml
libs/opt-submodular/src/opt_submodular/: __init__.py  optimizer.py  types.py
