[tool.poetry]
name = "doc-summarize"
version = "0.1.0"
description = ""
authors = ["mcordier <cordier.matthieu@bcg.com>"]
readme = "README.md"
packages = [{include = "doc_summarize"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
nltk = "^3.8.1"
scipy = "1.9.3"
click = "^8.1.3"

[tool.poetry.scripts]
doc-summarize = "doc_summarize.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
