[tool.poetry]
name = "opt-network"
version = "0.1.0"
description = ""
authors = ["mcordier <cordier.matthieu@bcg.com>"]
readme = "README.md"
packages = [{include = "opt_network"}]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.1"
pydantic = "^1.10.8"
numpy = "^1.24.3"
click = "^8.1.3"
ndlib = "^5.1.1"
matplotlib = "^3.7.1"
black = "^23.3.0"
isort = "^5.12.0"
pycln = "^2.1.5"

[tool.poetry.scripts]
opt-network = "opt_network.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
